deploy/aks/infrastructure/misc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devkit-ingress
  namespace: devkit-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  tls:
    - hosts:
        - ryanadriano.com
      secretName: aks-ingress-tls
  rules:
    - host: ryanadriano.com
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: gateway-clusterip
              servicePort: 80
